--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,5 +1,6 @@
 .card{
     border-radius: 20px;
+    position: relative;
 }
 
 .card--image {
@@ -54,4 +55,15 @@
 
 .card:hover {
     box-shadow: 0 0 10px skyblue;
+}
+
+.card--badge {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    background-color: white;
+    padding: 5px 7px;
+    border-radius: 2px;
+    font-weight: bold;
+    border-radius: 20px;
 }
